--- a/src/scss/layout/_grid.scss
+++ b/src/scss/layout/_grid.scss
@@ -1,8 +1,9 @@
 .grid-container {
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: max(120px, 100px) repeat (2, 1fr) max(120px, 100px);
     /* border: 2px solid magenta; */
     grid-gap: rem(20);
+    height: 80vh;
     
 
 
@@ -24,9 +25,9 @@
 
     @include breakpoint-up('small') {
         grid-template-areas: 
-                "img-container planet-text"
-                "img-container taps"
-                "planet-facts planet-facts";
+                ". img-container planet-text ."
+                ". img-container taps ."
+                ". planet-facts planet-facts .";
     }
     
 }
@@ -35,18 +36,31 @@
 
 .planet-container {
     grid-area: img-container;
+    align-self: center;
+    justify-self: center;
+
+ 
 }
 .planet-content {
     grid-area: planet-text;
+    align-self: flex-end;
+    justify-self: right;
+   
+    
 }
 
 
 .taps {
     grid-area: taps;
-    justify-self: right;
-    align-self: center;
+
+    @include breakpoint-up('small') {
+
+        justify-self: right;
+        align-self: center;
+    }
 }
 
 .planet-facts {
     grid-area: planet-facts;
+    align-self: flex-end;
 }
